Fix modal overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@
 .blinding-lights {
   --color-bg: white;
   --color-bg-1: rgb(230, 230, 230);
-  --color-fg: white;
+  --color-fg: #eeeeee;
   --color-text: black;
   --separator: 1px solid rgba(0, 0, 0, 0.12);
   --hero-separator: 1px solid rgba(0, 0, 0, 0.5);
@@ -333,8 +333,8 @@ footer {
 }
 
 .modal {
-  width: 50%;
-  height: 50%;
+  display: flex;
+  flex-direction: column;
   top: 50%;
   left: 50%;
   transform: translateX(-50%);
